--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,22 @@
+# Environment variables
 .env
-.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+node_modules/
+dist/
+build/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
